tests/baselines/reference/parservoidInQualifiedName2.errors.txt
tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName2.ts(1,9): error TS2503: Cannot find namespace 'x'.
tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName2.ts(1,11): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName2.ts(1,15): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName2.ts (3 errors) ====
    var v : x.void;
            ~
!!! error TS2503: Cannot find namespace 'x'.
              ~~~~
!!! error TS1003: Identifier expected.
                  ~
!!! error TS1109: Expression expected.